# voxelcraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
VoxelCraft/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  VoxelCraft.cpp  VoxelCraft.h  VoxelCraft.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  blocks.lua  cmake_install.cmake
VoxelCraft/VoxelCraft/: VoxelCraft.vcxproj  VoxelCraft.vcxproj.filters  cmake_install.cmake
VoxelCraft/VoxelCraft/VoxelCraft.dir/Debug/: vc143.idb
VoxelCraft/VoxelCraft/VoxelCraft.dir/Debug/VoxelCraft.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
VoxelCraft/lua_files/: lua.lib
VoxelCraft/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
VoxelCraft/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
